--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
-pip install tensorflow==2.2.7
+pip install numpy
 pip install h5py
-
+pip install seaborn
+pip install tensorflow==2.7
+pip install keras
+pip install mathpotlib
